# none-fault

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  memory.x  run.sh  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
