[package]
name = "none-fault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[features]
default = []

# 0 no optimizations
# 1-3 higher levels
# s optimize for size
# z optimize for size and turn off loop vectorization
[profile.dev.package."*"]
overflow-checks = false
opt-level = "z"
codegen-units = 1 # better optimizations
debug = false
debug-assertions = false

[profile.dev]
opt-level = "z"
debug = true
debug-assertions = true # controls both our own assertions plus whether RTT enabled
overflow-checks = false
lto = 'fat' # same as true? may do nothing if codegen-units is 1
panic = 'abort'
incremental = true
codegen-units = 8

#-----------------------------------
[dependencies]

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "nightly", "integrated-timers"] }
embassy-nrf = { version = "*", features = ["nrf52840", "time-driver-rtc1", "unstable-pac", "unstable-traits"] }
embassy-sync = "*"
embassy-time = "*"

critical-section = { version = "1.1", default-features = false }
nrf52840-hal = { version = "0.16.0" }

embedded-alloc = "0.5.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.4.0" }

[patch.crates-io]
# Note: latest known good version is whatever comes after rev = below.
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev="ce66276" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev="ce66276" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev="ce66276" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev="ce66276" }
